--- a/index.html
+++ b/index.html
@@ -3,8 +3,167 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600,300' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    Hello, world!
+
+<nav class="navbar navbar-fixed-top">
+    <a class="navbar-brand" href="#">
+        <img src="assets/img/logo.png" alt="faroutloud">
+    </a>
+    <div class="navbar-form navbar-right">
+        <button type="submit" class="btn-preorder">Preorder</button>
+    </div>
+</nav>
+
+<div id="carousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel" data-slide-to="1"></li>
+        <li data-target="#carousel" data-slide-to="2"></li>
+        <li data-target="#carousel" data-slide-to="3"></li>
+        <li data-target="#carousel" data-slide-to="4"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="assets/img/slide_01.jpg" alt="faroutloud">
+        </div>
+        <div class="item">
+            <img src="assets/img/slide_02.jpg" alt="faroutloud">
+        </div>
+        <div class="item">
+            <img src="assets/img/slide_03.jpg" alt="faroutloud">
+        </div>
+        <div class="item">
+            <img src="assets/img/slide_04.jpg" alt="faroutloud">
+        </div>
+        <div class="item">
+            <img src="assets/img/slide_05.jpg" alt="faroutloud">
+        </div>
+    </div>
+</div>
+
+
+
+<div id="books-to-come" class="row">
+    <div class="container">.
+        <div class="col-sm-7">
+            <img class="book" src="assets/img/book_cover.png" alt="">
+        </div>
+        <div class="col-sm-5 text-right">
+            <h2>Books to come</h2>
+            <h5 class="subheader">Girl on the moon</h5>
+            <p class="book-text">During a great sand storm on the moon ,Ginzi loses her sullen cat, Lilou and sets on an adventure to find and save him from the three rawdy brothers.</p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+
+
+    <div id="ipad" class="row">
+        <div class="col-sm-2">
+            <img src="assets/img/guide_cat.png" alt="" class="img-responsive">
+        </div>
+        <div class="col-sm-10">
+            <img src="assets/img/ipad_prev.png" alt="" class="img-responsive">
+        </div>
+    </div>
+
+    <div id="fav-text" class="text-center">
+        <div class="row">
+            <div class="col-sm-offset-1 col-sm-10">
+                <h2>Your favourite characters will come to life trough the amazing parallax effect</h2>
+                <h5 class="subheader">Graphic layers create the illusion of depth</h5>
+            </div>
+        </div>
+    </div>
+
+    <div id="buy" class="row">
+        <div class="col-sm-4">
+            <div class="thumbnail">
+                <img src="assets/img/steps_download.png" alt="download">
+                <div class="caption">
+                    <h3>Download</h3>
+                    <p>Instal the library “FarOutLoud app”
+                        from the AppStore for the iPad.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="thumbnail">
+                <img src="assets/img/steps_buy.png" alt="download">
+                <div class="caption">
+                    <h3>Buy</h3>
+                    <p>From our library you can access all
+                        our digital books with just one tap!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="thumbnail">
+                <img src="assets/img/steps_read.png" alt="download">
+                <div class="caption">
+                    <h3>Read</h3>
+                    <p>Purchase completed. All you have
+                        to do, is just read the book.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div id="who-we-are" class="row">
+        <div class="col-sm-4">
+            <h4>What we like</h4>
+            <p>You know, we really envy the way children read. They never get bored of their favourite story. They keep the characters into their imagination and take them by the hand to new adventures. They walk and talk and become good friends. We really love the way children pass fictional bariers like a drop
+                of rasberry juice through a white paper towel.</p>
+        </div>
+
+        <div class="col-sm-4">
+            <h4>Who we are</h4>
+            <p>We’re a team of people that enjoy reading and playing. We love art and technology as well. We may appear adults, but don’t get fooled by the display. Our moms can guarantee we’re far from growing up. But we think that we have a lot to offer and what other way can we do that if not through digital books. So `forget` your tablet around the house and let your kids discover great books on it. Make time to read to them. Or why not enjoy it yourself, it’ll be our little secret.</p>
+        </div>
+    </div>
+
+    <div id="join-us" class="row">
+        <div class="col-sm-4">
+            <img src="assets/img/join_us.png" alt="" class="img-responsive">
+        </div>
+    </div>
+
+    <div id="social" class="text-center">
+        <span class="fa fa-behance"></span>
+        <span class="fa fa-twitter"></span>
+        <span class="fa fa-facebook"></span>
+        <span class="fa fa-instagram"></span>
+    </div>
+
+    <div id="guide">
+        <img src="assets/img/guide_indiegogo.png" alt="">
+    </div>
+</div>
+
+
+<div id="footer">
+    <div class="container">
+        Copyright &copy; 2015 Faroutloud. All Rights reserved
+    </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 </body>
 </html>
