--- a/index.html
+++ b/index.html
@@ -50,18 +50,20 @@
             <img src="assets/img/slide_05.jpg" alt="faroutloud">
         </div>
     </div>
+
+    <img src="assets/img/buy_store_apple.png" alt="applestore" class="buy-apple">
 </div>
 
 
 
 <div id="books-to-come" class="row">
     <div class="container">.
-        <div class="col-sm-7">
+        <div class="col-sm-8">
             <img class="book" src="assets/img/book_cover.png" alt="">
         </div>
-        <div class="col-sm-5 text-right">
+        <div class="col-sm-4 text-right">
             <h2>Books to come</h2>
-            <h5 class="subheader">Girl on the moon</h5>
+            <h4 class="subheader">Girl on the moon</h4>
             <p class="book-text">During a great sand storm on the moon ,Ginzi loses her sullen cat, Lilou and sets on an adventure to find and save him from the three rawdy brothers.</p>
         </div>
     </div>
@@ -82,8 +84,8 @@
     <div id="fav-text" class="text-center">
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10">
-                <h2>Your favourite characters will come to life trough the amazing parallax effect</h2>
-                <h5 class="subheader">Graphic layers create the illusion of depth</h5>
+                <h2>Your favourite characters will come to life <br/> trough the amazing parallax effect</h2>
+                <h4 class="subheader">Graphic layers create the illusion of depth</h4>
             </div>
         </div>
     </div>
@@ -93,8 +95,8 @@
             <div class="thumbnail">
                 <img src="assets/img/steps_download.png" alt="download">
                 <div class="caption">
-                    <h3>Download</h3>
-                    <p>Instal the library “FarOutLoud app”
+                    <h4 class="text-center bold">Download</h4>
+                    <p class="text-center">Install the library “FarOutLoud app”
                         from the AppStore for the iPad.</p>
                 </div>
             </div>
@@ -104,8 +106,8 @@
             <div class="thumbnail">
                 <img src="assets/img/steps_buy.png" alt="download">
                 <div class="caption">
-                    <h3>Buy</h3>
-                    <p>From our library you can access all
+                    <h4 class="text-center bold">Buy</h4>
+                    <p class="text-center">From our library you can access all
                         our digital books with just one tap!</p>
                 </div>
             </div>
@@ -115,8 +117,8 @@
             <div class="thumbnail">
                 <img src="assets/img/steps_read.png" alt="download">
                 <div class="caption">
-                    <h3>Read</h3>
-                    <p>Purchase completed. All you have
+                    <h4 class="text-center bold">Read</h4>
+                    <p class="text-center">Purchase completed. All you have
                         to do, is just read the book.</p>
                 </div>
             </div>
@@ -126,13 +128,13 @@
 
     <div id="who-we-are" class="row">
         <div class="col-sm-4">
-            <h4>What we like</h4>
+            <h4 class="bold">What we like</h4>
             <p>You know, we really envy the way children read. They never get bored of their favourite story. They keep the characters into their imagination and take them by the hand to new adventures. They walk and talk and become good friends. We really love the way children pass fictional bariers like a drop
                 of rasberry juice through a white paper towel.</p>
         </div>
 
         <div class="col-sm-4">
-            <h4>Who we are</h4>
+            <h4 class="bold">Who we are</h4>
             <p>We’re a team of people that enjoy reading and playing. We love art and technology as well. We may appear adults, but don’t get fooled by the display. Our moms can guarantee we’re far from growing up. But we think that we have a lot to offer and what other way can we do that if not through digital books. So `forget` your tablet around the house and let your kids discover great books on it. Make time to read to them. Or why not enjoy it yourself, it’ll be our little secret.</p>
         </div>
     </div>
@@ -141,13 +143,36 @@
         <div class="col-sm-4">
             <img src="assets/img/join_us.png" alt="" class="img-responsive">
         </div>
+        <div class="col-sm-8">
+            <h2 class="">Keep in touch with <br/> Faroutloud</h2>
+        </div>
     </div>
 
     <div id="social" class="text-center">
-        <span class="fa fa-behance"></span>
-        <span class="fa fa-twitter"></span>
-        <span class="fa fa-facebook"></span>
-        <span class="fa fa-instagram"></span>
+        <a href="#">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-behance fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="#">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="#">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="#">
+            <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
     </div>
 
     <div id="guide">
@@ -159,11 +184,14 @@
 <div id="footer">
     <div class="container">
         Copyright &copy; 2015 Faroutloud. All Rights reserved
+        <a href="#">Terms of Use</a>
+        <a href="#">Visit AppStore</a>
     </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="src/main.js"></script>
 
 </body>
 </html>
